crates/tautcore-render/src/snapshots/tautcore_render__tests__minimal_svg_snapshot.snap
---
source: crates/tautcore-render/src/lib.rs
assertion_line: 550
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="200" height="200">
<defs>
<marker id="arrow-head-normal-0F766E-9ae691fef0" viewBox="0 0 10 10" refX="10" refY="5" markerWidth="5.33" markerHeight="5.33" orient="auto-start-reverse"><path d="M 0 0 L 10 5 L 0 10 z" fill="#0F766E"/></marker>
</defs>
<rect width="200" height="200" fill="#F7F7F8"/>
<path d="M 50.0 50.0 L 50.0 110.0" fill="none" stroke="#9C9CA6" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" stroke-opacity="1.00" marker-end="url(#arrow-head-normal-0F766E-9ae691fef0)"/>
<rect x="10" y="10" width="80" height="40" rx="6" fill="#FFFFFF" stroke="#C9C9C9" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
<rect x="10" y="110" width="80" height="40" rx="6" fill="#FFFFFF" stroke="#C9C9C9" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
</svg>
